deploy/scw/50-maildev.yaml
apiVersion: v1
kind: Service
metadata:
  name: maildev
  namespace: sentropic
  labels:
    app.kubernetes.io/name: sentropic
    app.kubernetes.io/component: maildev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sentropic
    app.kubernetes.io/component: maildev
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: ui
      port: 1080
      targetPort: 1080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
  namespace: sentropic
  labels:
    app.kubernetes.io/name: sentropic
    app.kubernetes.io/component: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sentropic
      app.kubernetes.io/component: maildev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sentropic
        app.kubernetes.io/component: maildev
    spec:
      serviceAccountName: sentropic-app
      containers:
        - name: maildev
          image: maildev/maildev:2.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: smtp
              containerPort: 1025
            - name: ui
              containerPort: 1080
          readinessProbe:
            tcpSocket:
              port: 1080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
